--- a/Translations/German/text-hint-change.xml
+++ b/Translations/German/text-hint-change.xml
@@ -64,7 +64,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_HINT_15</zType>
-		<Translation>link(IMPROVEMENT_QUARRY,2) die neben einem Gebirge gebaut werden prodzieren mehr link(YIELD_STONE)icon(YIELD_STONE) für jedes angrenzendes Gebirgsfeld. ink(IMPROVEMENT_QUARRY,2) erhalten einen kleinen Anstieg wenn sie in trockenem Gebiet gebaut werden.</Translation>
+		<Translation>link(IMPROVEMENT_QUARRY,2) die neben einem Gebirge gebaut werden produzieren mehr link(YIELD_STONE)icon(YIELD_STONE) für jedes angrenzendes Gebirgsfeld. ink(IMPROVEMENT_QUARRY,2) erhalten einen kleinen Anstieg wenn sie in trockenem Gebiet gebaut werden.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HINT_16</zType>
