--- a/Translations/German/text-law-change.xml
+++ b/Translations/German/text-law-change.xml
@@ -83,7 +83,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_LAW_TOLERANCE</zType>
-		<Translation>Tolleranz</Translation>
+		<Translation>Toleranz</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_LAW_ORTHODOXY</zType>
