--- a/Translations/German/text-ui-change.xml
+++ b/Translations/German/text-ui-change.xml
@@ -300,7 +300,7 @@
 	</Entry>
 	<Entry>	
 		<zType>TEXT_UI_EVENT_LOG_DISMISS_TOOLTIP</zType>
-		<Translation>Rechtsklick zum ausblenden</Translation>
+		<Translation>Rechts-Klick zum ausblenden</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_UI_TILE_BOUNDARY_TOOLTIP_WATER_TITLE</zType>
@@ -763,10 +763,6 @@
 		<Translation>Bedingungen für eine anvisierte Technologie</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_UI_TOOLTIP_LUXURIES</zType>
-		<Translation>Luxusgüter: </Translation>
-	</Entry>
-	<Entry>
 		<zType>TEXT_UI_TOOLTIP_LUXURIES_HELP</zType>
 		<Translation>link(CONCEPT_LUXURY) können an andere Reiche, Stämme und Familien gegeben werden um die Meinung zu verbessern. Sie können außerdem an Städte geliefert werden um link(YIELD_DISCONTENT) zu verringern.
 Luxusgüter werden freigeschaltet, indem man Spezialisten auf Verbesserungen erstellt. Zum Beispiel, das link(RESOURCE_HONEY) Luxusgut kommt von link(SPECIALIST_GARDENER,1) auf link(IMPROVEMENT_GROVE,1).</Translation>
@@ -1108,7 +1104,7 @@ Jeglicher ungespeicherter Forschritt geht verloren.</Translation>
     </Entry>
     <Entry>
         <zType>TEXT_MENU_SCREEN_QUIT_BUTTON</zType>
-        <Translation>Zurück zum Desktop</Translation>
+        <Translation>Zum Desktop</Translation>
     </Entry>
     <Entry>
         <zType>TEXT_MENU_SCREEN_PREVIOUS_BUTTON</zType>
@@ -2019,10 +2015,6 @@ Jeglicher ungespeicherter Forschritt geht verloren.</Translation>
 	</Entry>
     <!--tab-panel.xml-->
     <!--character tab-->
-    <Entry>
-        <zType>TEXT_TAB_PANEL_CHARTAB_COURT</zType>
-        <Translation>Hofstaat</Translation>
-    </Entry>
 	<Entry>	
         <zType>TEXT_TAB_PANEL_CHARTAB_CHARACTERS</zType>
         <Translation>Charaktere</Translation>
