renamed "Wartung" to "Instandhaltung"

--- a/Translations/German/text-yield-change.xml
+++ b/Translations/German/text-yield-change.xml
@@ -36,7 +36,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_MAINTENANCE</zType>
-		<Translation>Wartung</Translation>
+		<Translation>Instandhaltung</Translation>
 	</Entry>
 	<Entry comment="Note, since this is the only countable noun (non-mass) using a different scheme for the alternate forms">
 		<zType>TEXT_YIELD_ORDERS</zType>
